# simmetry

./: .gitignore  .gitmodules  Cargo.toml  README.md  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api_server/: Cargo.toml  project.json
apps/api_server/src/: app_config.rs  app_state.rs  main.rs  schema.rs  setup.rs  types.rs
apps/api_server/src/handlers/: ws.rs
apps/api_server/src/handlers/ws/: f1.rs  forza.rs  mod.rs
apps/api_server/src/services/: forza.rs
apps/benchmark/: Cargo.toml  project.json
apps/benchmark/src/: main.rs
apps/client/: eslint.config.mjs  nuxt.config.ts  tsconfig.app.json  tsconfig.spec.json  uno.config.ts  vitest.config.ts
apps/client-e2e/: cypress.config.ts
apps/client/src/: app.vue
apps/client/src/components/: NxWelcome.vue
apps/client/src/modules/: tauri.ts
apps/client_tauri/: .env  Cargo.toml  project.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
apps/client_tauri/capabilities/: main.json
apps/client_tauri/src/: app_state.rs  config.rs  error.rs  eval.rs  global.rs  lib.rs  main.rs  setup.rs  ws_client.rs  ws_server.rs
apps/client_tauri/src/commands/: create_udp_listener.rs  lib.rs  mod.rs  stop_udp_listener.rs
apps/client_tauri/src/constants/: mod.rs
libs/rs/derive_jsonb/: Cargo.toml  project.json
libs/rs/derive_jsonb/src/: lib.rs
libs/rs/shared/: Cargo.toml  diesel.toml  project.json
libs/rs/shared/migrations/2025-03-17-092643_create_forza_data/: down.sql  up.sql
libs/rs/shared/src/: constants.rs  lib.rs  macros.rs  utils.rs
libs/rs/shared/src/database/: mod.rs  schema.rs
libs/rs/shared/src/database/models/: asseto.rs  f1.rs  forza.rs  mod.rs  user.rs
libs/rs/shared/src/database/models/f1/: mod.rs
libs/rs/shared/src/packets/: mod.rs
libs/rs/shared/src/packets/f1/: car_damage.rs  car_setups.rs  car_status.rs  car_telemetry.rs  enums.rs  event.rs  final_classification.rs  headers.rs  laps.rs  lobby.rs  mod.rs  motion.rs  packet.rs  participants.rs  session.rs  session_history.rs  time_trial.rs  tyre_sets.rs
libs/rs/shared/src/packets/f1/constants/: mod.rs
libs/rs/shared/src/packets/forza/: enums.rs  mod.rs  packet.rs  schema.rs
libs/shared/: package.json  project.json
libs/shared/prisma/: schema.prisma
libs/shared/prisma/migrations/20250316150025_init/: migration.sql
libs/shared/prisma/migrations/20250317160122_create_user/: migration.sql
libs/shared/prisma/migrations/20250317160123_create_forza_data/: migration.sql
libs/shared/prisma/migrations/20250319180213_create_table_users/: migration.sql
libs/shared/prisma/migrations/20250319184513_create_table_forza_telemetry/: migration.sql
libs/ui-kit/: package.json  vite.config.ts
