
cargo-features = ['codegen-backend']

[profile.dev]
codegen-backend = 'cranelift'
split-debuginfo = 'unpacked'
opt-level = 3

[profile.release]
lto = true
opt-level = 3

[profile.profiling]
inherits = 'release'
debug = true

[workspace]
resolver = '2'
members = [
  'apps/client_tauri',
  'apps/api_server',
  'libs/rs/shared',
  'libs/rs/derive_jsonb',
  'apps/benchmark',
]
