[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rs_shared = { path = "../../libs/rs/shared", features = ["db"] }
derive_jsonb = { path = "../../libs/rs/derive_jsonb" }
axum = { version = "0.8.1", features = ["macros"] }
bincode = { version = "2.0.1", features = ["serde", "derive"] }
binrw = "0.14.1"
bitflags = "2.9.0"
chrono = { version = "0.4.40", features = ["serde"] }
crossbeam-channel = { version = "0.5.14" }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.8", features = [
  "postgres",
  "serde_json",
  "uuid",
  "chrono",
  "64-column-tables",
  "128-column-tables",
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
futures = "0.3.31"
futures-util = "0.3.31"
hyper = { version = "1.6.0", features = ["http1", "http2", "server"] }
hyper-util = "0.1.10"
num_cpus = "1.16.0"
once_cell = "1.21.1"
rand = "0.9.0"
redis = { version = "0.28.2", default-features = false, features = [
  "aio",
  "tokio-comp",
  "tokio-native-tls-comp",
  "r2d2",
  "json",
] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_derive = "1.0.219"
serde_json = "1.0.140"
socketioxide = { version = "0.16.1", features = [
  "msgpack",
  "tracing",
  "state",
] }
socketioxide-parser-msgpack = "0.16.0"
socketioxide-redis = { version = "0.2.0", features = [
  "redis",
  "redis-cluster",
] }
strum = "0.27.1"
sysinfo = "0.33.1"
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.2", default-features = false, features = [
  "cors",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.15.1", default-features = false, features = [
  "serde",
  "v7",
] }
