[package]
name = "simmetry"
version = "0.0.1"
description = "Simmetry - All in one apps for sim racing telemetry"
authors = ["NicolaSpadari"]
license = "MIT"
repository = "https://github.com/0x67/simmetry"
edition = "2021"

[lib]
name = "simmetry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

#[build]
#target-dir = "dist/target/client_tauri"

[build-dependencies.tauri-build]
version = "2.0.5"
features = []

[dependencies]
bincode = { version = "2.0.1", features = ["serde", "derive"] }
futures-util = "0.3.31"
os_info = { version = "3", default-features = false }
rand = "0.9"
rmp = "0.8.14"
rmp-serde = "1.3.0"
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tauri = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-fs = "2.2.0"
tauri-plugin-log = "2.3.1"
tauri-plugin-notification = "2.2.2"
tauri-plugin-os = "2.2.1"
tauri-plugin-sentry = "0.4.1"
tauri-plugin-shell = "2.2.0"
tauri-plugin-store = "2.2.0"
time = { version = "0.3.39", features = ['macros', 'serde'] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", features = [
  'time',
  'env-filter',
  'json',
] }
uuid = { version = "1.15.1", features = ["serde", "v7"] }
