[package]
name = "rs_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.1", features = ["serde", "derive"] }
binrw = "0.14.1"
bitflags = "2.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_derive = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
uuid = { version = "1.15.1", default-features = false, features = [
  "serde",
  "v7",
] }
