[package]
name = "rs_shared"
version = "0.1.0"
edition = "2021"

[features]
db = ["diesel", "diesel-derive-enum"]

[dependencies]
derive_jsonb = { path = "../../rs/derive_jsonb" }
bincode = { version = "2.0.1", features = ["serde", "derive"] }
binrw = "0.14.1"
bitflags = "2.9.0"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { optional = true, version = "2.2.8", features = [
  "postgres",
  "serde_json",
  "uuid",
  "chrono",
  "64-column-tables",
  "128-column-tables",
] }
diesel-derive-enum = { optional = true, version = "2.1.0", features = [
  "postgres",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_derive = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
uuid = { version = "1.15.1", default-features = false, features = [
  "serde",
  "v7",
] }
